# Judger

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .install_dependence.sh  CMakeLists.txt  Dockerfile  README.md  deploy.sh  k8s-deploy.yaml  requirements.txt  run.sh
config/: config-moj.json
config-example/: judge-dev.service  judge.service
config-example/judge-dev.service.d/: env.conf
config-example/judge.service.d/: env.conf
doc/: 编程题请求文档.md
docker/: Dockerfile.base  Dockerfile.run
exec/: check_diff.sh  chroot_make.sh  chroot_run.sh  chroot_setup.sh  compile.sh  compile_executable.sh  create_cgroups.sh  create_sudoers.sh  random_generator.sh  sicily_spjudge.sh  utils.sh
exec/check/gtest/: convert.py  run
exec/check/memory/: convert.py  run
exec/check/standard/: run
exec/check/standard-trusted/: run
exec/check/static/: process.py  run
exec/compare/diff-all/: run
exec/compare/diff-ign-space/: run
exec/compare/gtest/: run
exec/compare/valgrind/: run
exec/compile/ada/: run
exec/compile/awk/: run
exec/compile/bash/: run
exec/compile/c/: .syscall64  run
exec/compile/cpp/: .syscall64  process.py  run  static
exec/compile/csharp/: run
exec/compile/fortran95/: run
exec/compile/fsharp/: run
exec/compile/go/: run
exec/compile/haskell/: process.py  run  static
exec/compile/java/: config.xml  process.py  run  static
exec/compile/js/: run
exec/compile/kotlin/: DetectMain.java  run
exec/compile/lua/: run
exec/compile/make/: run
exec/compile/pas/: run
exec/compile/perl/: run
exec/compile/python2/: run  static
exec/compile/python3/: process.py  pylintrc  run  static
exec/compile/r/: run
exec/compile/ruby/: run
exec/compile/rust/: run
exec/compile/scala/: run
exec/compile/swift/: run
exec/compile/vbnet/: run
exec/run/gtest/: run
exec/run/oclint/: run
exec/run/standard/: run
exec/run/valgrind/: run
exec/utils/: check_helper.sh  chroot_setup.sh  logging.sh  runguard.sh  utils.sh
file-test/: config-moj.json  docker-compose.yml  request.json  test.py
file-test/fake_file/: header.hpp  random.c  stand_header.h  sub_header.h  sub_main.cpp
include/: asset.hpp  config.h  config.hpp  env.hpp  execute.h  msg_queue.hpp  program.hpp  reflection.hpp  runguard.hpp  stl_utils.hpp  syscall_table.h  utils.hpp  worker.hpp  worker_state.hpp
include/client/: client.hpp  judge.hpp
include/client/task/: compilation.hpp
include/common/: concurrent_queue.hpp  defer.hpp  exceptions.hpp  interprocess.hpp  io_utils.hpp  json_utils.hpp  messages.hpp  metadata.hpp  msg_queue.hpp  python.hpp  status.hpp  stl_utils.hpp  utils.hpp
include/filecache/: filecache.hpp
include/judge/: choice.hpp  judger.hpp  program_output.hpp  programming.hpp  submission.hpp
include/monitor/: elastic_apm.hpp  mcourse.hpp  monitor.hpp
include/server/: asset.hpp  config.hpp  executable.hpp  judge_server.hpp  problem.hpp  program.hpp  rabbitmq.hpp  redis.hpp  remote_server.hpp  server.hpp  status.hpp  submission.hpp  submission_fetcher.hpp
include/server/common/: config.hpp  redis.hpp  submission_fetcher.hpp
include/server/domjudge/: domjudge.hpp
include/server/forth/: forth.hpp
include/server/mcourse/: choice.hpp  feedback.hpp  mcourse.hpp
include/server/moj/: choice.hpp  config.hpp  feedback.hpp  moj.hpp  submission_fetcher.hpp
include/server/sicily/: sicily.hpp
include/sql/: connection_pool.hpp  dbng.hpp  entity.hpp  mysql.hpp  type_mapping.hpp  utility.hpp
judge-server-2.0/: server.py
judge-server-2.0/handlers/main/: MainHandler.py
judge-server-2.0/handlers/rejudge/: RejudgeHandler.py
judge-server-2.0/handlers/submission/: SubmissionHandler.py
judge-server-2.0/utils/common/: configuration.py
judge-server-2.0/utils/logger/: config.py
judge-server-2.0/utils/mysql/: mysqller.py
judge-server-2.0/utils/rabbitmq/: rabbitmqer.py
runguard/: CMakeLists.txt  README.md
runguard/include/: cgroup.hpp  limits.hpp  run.hpp  runguard_options.hpp  syscall_name.hpp  syscall_table.hpp  system.hpp  utils.hpp
runguard/src/: cgroup.cpp  limits.cpp  run.cpp  runguard.cpp  syscall_name.cpp  syscall_table.cpp  system.cpp  utils.cpp
script/: syscall_watcher.cpp
script/elastic/: apmclient.py
script/mcourse/: Dockerfile.server  judge.py
src/: asset.cpp  cgroup.cpp  config.c  config.cpp  env.cpp  error.cpp  execute.c  judge.c  judge.cpp  main.cpp  msg_queue.cpp  program.cpp  runguard.cpp  syscall_table.c  utils.cpp  worker.cpp
src/client/: client.cpp  judge.cpp
src/client/task/: compilation.cpp
src/common/: defer.cpp  exceptions.cpp  interprocess.cpp  io_utils.cpp  messages.cpp  metadata.cpp  msg_queue.cpp  python.cpp  status.cpp  stl_utils.cpp  system.cpp  utils.cpp
src/judge/: choice.cpp  judger.cpp  program_output.cpp  programming.cpp  submission.cpp
src/monitor/: elastic_apm.cpp  mcourse.cpp  monitor.cpp
src/server/: asset.cpp  config.cpp  executable.cpp  judge_server.cpp  problem.cpp  program.cpp  rabbitmq.cpp  redis.cpp  server.cpp  submission.cpp  submission_fetcher.cpp
src/server/common/: config.cpp  redis.cpp  submission_fetcher.cpp
src/server/domjudge/: domjudge.cpp
src/server/forth/: forth.cpp
src/server/mcourse/: feedback.cpp  mcourse.cpp
src/server/moj/: choice.cpp  config.cpp  feedback.cpp  moj.cpp  submission_fetcher.cpp
src/server/sicily/: sicily.cpp
test/: test-exec.sh
test/2.0/: choice.py  config-mcourse.json  monitor-fix.sql  server.conf  test.py
test/2.0/abnormal/: config.json  detail.json
test/2.0/normal/: config.json
test/3.0/: .test.py.swp  choice-request.json  config-moj.json  docker-compose.yml  launch.sh  prepare.sh  request.json  test.py  upload.py
test/3.0/fake_file/: main.cpp  random.c  random_gen.py  stand_main.cpp  (+2 more)
test/4.0/: request.jsonc
unit-test/: MemoryCheckerTest.cpp  MultiLanguageTest.cpp  RabbitMQTest.cpp  RandomCheckerTest.cpp  StandardCheckerTest.cpp  StaticCheckerTest.cpp  main.cpp
unit-test/gtest/: GTestCheckerTest.cpp
unit-test/test/: assertions.hpp  mock_judge_server.hpp  mock_judge_server_Test.cpp  worker.hpp  worker_Test.cpp
(+30 files in other folders)
